# repo

./: .gitconfig  CMakeLists.txt  abcde  cos.txt  group  nowy_plik.txt  plik.txt  scrummasters.txt  siema  skrypt2.pc.sh  skrypt4.pc.sh  tabelka.xlsx  tdm.txt  test99  test99.txt  tosia.txt  univ.txt
